--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,9 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="bold"
         android:id="@+id/uploadText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -17,6 +20,9 @@
         app:layout_constraintTop_toTopOf="@+id/downloadText" />
 
     <TextView
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="bold"
         android:id="@+id/downloadText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -27,6 +33,9 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="bold"
         android:id="@+id/ipText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -38,6 +47,9 @@
 
 
     <TextView
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="bold"
         android:id="@+id/timerText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -57,6 +69,9 @@
         app:layout_constraintTop_toBottomOf="@+id/timerText" />
 
     <TextView
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="bold"
         android:id="@+id/connectionStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -71,6 +86,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Stop"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
