--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.VPNSDK" parent="@style/Theme.AppCompat.NoActionBar" />
+    <style name="Theme.VPNSDK" parent="@style/Theme.AppCompat.DayNight.NoActionBar" />
 
 </resources>
