--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,44 +20,60 @@
         app:layout_constraintTop_toTopOf="@+id/downloadText" />
 
     <TextView
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        android:textStyle="bold"
         android:id="@+id/downloadText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="download"
-        app:layout_constraintBottom_toTopOf="@+id/timerText"
-        app:layout_constraintEnd_toStartOf="@+id/ipText"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/ipText"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/uploadText"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        android:textStyle="bold"
         android:id="@+id/ipText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:text="8.8.8.8"
-        app:layout_constraintBottom_toBottomOf="@+id/downloadText"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/downloadText"
-        app:layout_constraintTop_toTopOf="@+id/downloadText" />
-
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/timerText"
+        app:layout_constraintEnd_toStartOf="@+id/pingTv"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/downloadText" />
 
     <TextView
+        android:id="@+id/pingTv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:text="0"
+        app:layout_constraintBottom_toBottomOf="@+id/ipText"
         android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/ipText"
+        app:layout_constraintTop_toTopOf="@+id/ipText" />
+
+
+    <TextView
         android:id="@+id/timerText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="00:00:00"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button1"
-        app:layout_constraintEnd_toStartOf="@+id/ipText"
-        app:layout_constraintStart_toEndOf="@+id/uploadText"
-        app:layout_constraintTop_toBottomOf="@id/downloadText" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/pingTv" />
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
