--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,12 +70,12 @@
         android:textColor="@color/black"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/button1"
+        app:layout_constraintBottom_toTopOf="@+id/buttonWireguard"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/pingTv" />
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/buttonWireguard"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Start Wuardireg"
@@ -85,13 +85,13 @@
         app:layout_constraintTop_toBottomOf="@+id/timerText" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/buttonSingbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Start Singbox"
         app:layout_constraintBottom_toTopOf="@+id/connectionStatus"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button1"
+        app:layout_constraintStart_toEndOf="@+id/buttonWireguard"
         app:layout_constraintTop_toBottomOf="@+id/timerText" />
 
     <TextView
@@ -105,7 +105,7 @@
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button1" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonWireguard" />
 
     <Button
         android:id="@+id/button2"
