--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,6 +99,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Start IpSec"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/connectionStatus"
         app:layout_constraintEnd_toStartOf="@id/button2"
         app:layout_constraintStart_toStartOf="parent"
@@ -112,8 +113,8 @@
         android:text="Start OVpn"
         app:layout_constraintBottom_toBottomOf="@+id/buttonIpSec"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/buttonIpSec"
-        app:layout_constraintTop_toTopOf="@+id/buttonIpSec" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonSingbox" />
 
     <TextView
         android:textColor="@color/black"
@@ -126,7 +127,7 @@
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonIpSec" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonOvpn" />
 
     <Button
         android:id="@+id/button2"
