--- a/app/src/main/res/layout/fragment_split_tunnel.xml
+++ b/app/src/main/res/layout/fragment_split_tunnel.xml
@@ -72,7 +72,7 @@
                 android:layout_marginTop="16dp"
                 android:includeFontPadding="false"
                 android:text="Allowed Apps"
-                android:textColor="#3E3E3E"
+                android:textColor="@color/black"
                 android:textSize="12sp"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -102,7 +102,7 @@
                 android:layout_marginTop="24dp"
                 android:includeFontPadding="false"
                 android:text="Disallowed Apps"
-                android:textColor="#3E3E3E"
+                android:textColor="@color/black"
                 android:textSize="12sp"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
